Moves all traefik routing configuration to files

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -35,53 +35,15 @@ volumes:
     driver: ${VOLUMES_DRIVER}
 
 services:
-  ### Application ################################################
-  # frontend:
-  #   restart: always
-  #   build:
-  #     context: ../frontend/
-  #   volumes:
-  #     - ${APP_CODE_PATH_CONTAINER}/app/node_modules
-  #     - ${APP_CODE_PATH_HOST}/app:${APP_CODE_PATH_CONTAINER}/app
-  #   env_file: ../frontend/.env
-  #   depends_on:
-  #     - traefik
-  #   networks:
-  #     - frontend
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.http.routers.frontend.rule=Host(`frontend.$DOMAIN_NAME`)"
-  #     - "traefik.http.routers.frontend.entrypoints=web, websecure"
-  #     - "traefik.http.services.frontend.loadbalancer.server.port=3000"
-  #     - "traefik.http.middlewares.auth.basicauth.users=test:xxx"
-  # - "traefik.http.routers.frontend.tls.certresolver=cloudflareDns"
+  # WHOAMI ################################################
+  whoami:
+    image: emilevauge/whoami
+    networks:
+      - dockernet
+    labels:
+      - "traefik.enable=true"
 
-  ################################################
-  ## Adonis Microservices ################################################
-
-  # authors:
-  #   restart: always
-  #   build:
-  #     context: ../${MS_DIR}/${MS_ONE}
-  #     dockerfile: Dockerfile.v5.dev
-  #   volumes:
-  #     - ${APP_CODE_PATH_CONTAINER}/api/node_modules
-  #     - ${APP_CODE_PATH_HOST}/${MS_DIR}/${MS_ONE}:${APP_CODE_PATH_CONTAINER}/api
-  #   env_file: ../${MS_DIR}/${MS_ONE}/.env
-  #   depends_on:
-  #     - ${API_DATABASE_CLIENT}
-  #   networks:
-  #     - frontend
-  #     - backend
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.http.routers.authors.rule=Host(`authors.$DOMAIN_NAME`)"
-  #     - "traefik.http.routers.authors.entrypoints=web, websecure"
-  #     - "traefik.http.services.authors.loadbalancer.server.port=3333"
-  # - "traefik.http.routers.authors.tls.certresolver=cloudflareDns"
-
-  ## GRAPHQL API ################################################
-
+  # GRAPHQL API ################################################
   graphql:
     build:
       context: graphql
@@ -106,10 +68,6 @@ services:
       - prisma
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.graph.rule=Host(`graph.$DOMAIN_NAME`)"
-      - "traefik.http.routers.graph.entrypoints=web, websecure"
-      - "traefik.http.services.graph.loadbalancer.server.port=${GRAPHQL_CONTAINER_PORT}"
-      # - "traefik.http.routers.graph.tls.certresolver=cloudflareDns"
 
   ## PRISMA ################################################
   prisma:
@@ -150,10 +108,6 @@ services:
       - backend
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.prisma.rule=Host(`prisma.$DOMAIN_NAME`)"
-      - "traefik.http.routers.prisma.entrypoints=web, websecure"
-      - "traefik.http.services.prisma.loadbalancer.server.port=${PRISMA_CONTAINER_PORT}"
-      # - "traefik.http.routers.prisma.tls.certresolver=cloudflareDns"
 
   ## STRAPI ################################################
   strapi:
@@ -179,10 +133,6 @@ services:
       - ${DATA_PATH_HOST}/strapi:/srv/app
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.strapi.rule=Host(`strapi.$DOMAIN_NAME`)"
-      - "traefik.http.routers.strapi.entrypoints=web, websecure"
-      - "traefik.http.services.strapi.loadbalancer.server.port=${STRAPI_CONTAINER_PORT}"
-      # - "traefik.http.routers.strapi.tls.certresolver=cloudflareDns"
 
   ### MySQL ################################################
   mysql:
@@ -283,10 +233,6 @@ services:
       - mongo
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.mongo.rule=Host(`mongo.$DOMAIN_NAME`)"
-      - "traefik.http.routers.mongo.entrypoints=web, websecure"
-      - "traefik.http.services.mongo.loadbalancer.server.port=${MONGO_WEBUI_PORT}"
-      # - "traefik.http.routers.mongo.tls.certresolver=cloudflareDns"
 
   ### Mongo Express ##############################################
   mongo-express:
@@ -308,10 +254,6 @@ services:
       ME_CONFIG_MONGODB_AUTH_PASSWORD: ${API_DATABASE_PASSWORD}
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.mongoex.rule=Host(`mongoex.$DOMAIN_NAME`)"
-      - "traefik.http.routers.mongoex.entrypoints=web, websecure"
-      - "traefik.http.services.mongoex.loadbalancer.server.port=${MONGO_EXPRESS_CONTAINER_PORT}"
-      # - "traefik.http.routers.mongoex.tls.certresolver=cloudflareDns"
 
   ### Jenkins ###################################################
   jenkins:
@@ -330,10 +272,6 @@ services:
       - backend
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.jenkins.rule=Host(`jenkins.$DOMAIN_NAME`)"
-      - "traefik.http.routers.jenkins.entrypoints=web, websecure"
-      - "traefik.http.services.jenkins.loadbalancer.server.port=${JENKINS_CONTAINER_PORT}"
-      # - "traefik.http.routers.jenkins.tls.certresolver=cloudflareDns"
 
   ### Webhook ###################################################
   webhook:
@@ -346,10 +284,6 @@ services:
       - dockernet
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.webhook.rule=Host(`webhook.$DOMAIN_NAME`)"
-      - "traefik.http.routers.webhook.entrypoints=web, websecure"
-      - "traefik.http.services.webhook.loadbalancer.server.port=${WEBHOOK_CONTAINER_PORT}"
-      # - "traefik.http.routers.webhook.tls.certresolver=cloudflareDns"
 
   ### Adminer ################################################
   adminer:
@@ -364,10 +298,6 @@ services:
       - backend
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.adminer.rule=Host(`adminer.$DOMAIN_NAME`)"
-      - "traefik.http.routers.adminer.entrypoints=web, websecure"
-      - "traefik.http.services.adminer.loadbalancer.server.port=${ADMINER_CONTAINER_PORT}"
-      # - "traefik.http.routers.adminer.tls.certresolver=cloudflareDns"
 
   ### phpMyAdmin ################################################
   phpmyadmin:
@@ -381,10 +311,6 @@ services:
       - backend
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.pma.rule=Host(`pma.$DOMAIN_NAME`)"
-      - "traefik.http.routers.pma.entrypoints=web, websecure"
-      - "traefik.http.services.pma.loadbalancer.server.port=${PHPMYADMIN_CONTAINER_PORT}"
-      # - "traefik.http.routers.pma.tls.certresolver=cloudflareDns"
 
   ### pgAdmin ################################################
   pgadmin:
@@ -403,10 +329,6 @@ services:
       - backend
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.pg.rule=Host(`pg.$DOMAIN_NAME`)"
-      - "traefik.http.routers.pg.entrypoints=web, websecure"
-      - "traefik.http.services.pg.loadbalancer.server.port=${PGADMIN_CONTAINER_PORT}"
-      # - "traefik.http.routers.pg.tls.certresolver=cloudflareDns"
 
   ### Redis ################################################
   redis:
@@ -444,10 +366,6 @@ services:
       - redis
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.redis.rule=Host(`redis.$DOMAIN_NAME`)"
-      - "traefik.http.routers.redis.entrypoints=web, websecure"
-      - "traefik.http.services.redis.loadbalancer.server.port=${REDIS_WEBUI_CONTAINER_PORT}"
-      # - "traefik.http.routers.redis.tls.certresolver=cloudflareDns"
 
   ### TRAEFIK #########################################
   socket-proxy:
@@ -482,23 +400,6 @@ services:
       - socket-proxy
     labels:
       - traefik.enable=true
-      # Dashboard
-      - "traefik.http.routers.traefik.entrypoints=web, websecure"
-      - "traefik.http.routers.traefik.rule=Host(`tk.$DOMAIN_NAME`)"
-      - "traefik.http.middlewares.traefik-auth.basicauth.users=user:htpasswd -nb"
-      - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
-      - "traefik.http.routers.traefik-secure.entrypoints=websecure"
-      - "traefik.http.routers.traefik-secure.rule=Host(`tk.$DOMAIN_NAME`)"
-      - "traefik.http.routers.traefik-secure.tls=true"
-      - "traefik.http.routers.traefik-secure.tls.certresolver=letsEncryptDnsCustomCustom"
-      - "traefik.http.routers.traefik-secure.tls.domains[0].main=*.$DOMAIN_NAME" # Comment out this line after first run of traefik to force the use of wildcard certs
-      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=$DOMAIN_NAME"
-      - "traefik.http.routers.traefik-secure.service=api@internal"
-      - "traefik.http.services.traefik.loadbalancer.server.port=8080"
-      ## Middlewares
-      - "traefik.http.routers.traefik-secure.middlewares=traefik-auth,rate-limit@file"
-      # - "traefik.http.routers.traefik-rtr.middlewares=traefik-headers,rate-limit@file,traefik-auth"
 
   ### ELASTICSEARCH ########################################
   elasticsearch:
@@ -530,10 +431,6 @@ services:
         ipv4_address: 192.168.90.7
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.elastic.rule=Host(`elastic.$DOMAIN_NAME`)"
-      - "traefik.http.routers.elastic.entrypoints=web, websecure"
-      - "traefik.http.services.elastic.loadbalancer.server.port=${ELASTICSEARCH_HOST_HTTP_PORT}"
-      # - "traefik.http.routers.elastic.tls.certresolver=cloudflareDns"
 
   ### FUSIONAUTH ########################################
   fusionauth:
@@ -563,7 +460,3 @@ services:
     # - 9011:${FUSIONAUTH_CONTAINER_PORT}
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.fusionauth.rule=Host(`auth.$DOMAIN_NAME`)"
-      - "traefik.http.routers.fusionauth.entrypoints=web, websecure"
-      - "traefik.http.services.fusionauth.loadbalancer.server.port=${FUSIONAUTH_CONTAINER_PORT}"
-      # - "traefik.http.routers.fusionauth.tls.certresolver=cloudflareDns"
