--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -1,7 +1,31 @@
-### DNS CHALLENGE ################################################
+### DNS CHALLENGE AUTH ################################################
 
-# DO_AUTH_TOKEN=
-# NAMECHEAP_API_USER=
-# NAMECHEAP_API_KEY=
-# NAMECHEAP_API_USER_FILE=/run/secrets/namecheap_user
-# NAMECHEAP_API_KEY_FILE=/run/secrets/namecheap/api_key
+# NAMECHEAP_API_USER=NamecheapUsername
+# NAMECHEAP_API_KEY=NamecheapAPIKey
+# CF_DNS_API_TOKEN=CloudflareZoneAPIToken
+
+# Necessary for a project with a lot of services. Must be the same as
+# the poject name in the `docker-compose` environment file at
+# ../.env
+COMPOSE_PROJECT_NAME=wins
+
+### APPLICATION DOMAINS #################################################
+# Domain name of reverse SSH tunnel such as ngrok
+TUNNEL_URL=your.domain.tld
+# Local domain name
+DOMAIN_NAME=local.test
+
+### APPLICATION PORTS #################################################
+APP_CONTAINER_PORT=3000
+GRAPHQL_CONTAINER_PORT=4000
+PRISMA_CONTAINER_PORT=4466
+STRAPI_CONTAINER_PORT=1337
+MONGO_EXPRESS_CONTAINER_PORT=8081
+JENKINS_CONTAINER_PORT=8080
+WEBHOOK_CONTAINER_PORT=9000
+ADMINER_CONTAINER_PORT=8080
+PHPMYADMIN_CONTAINER_PORT=80
+PGADMIN_CONTAINER_PORT=80
+REDIS_WEBUI_CONTAINER_PORT=80
+ELASTICSEARCH_HOST_HTTP_PORT=9200
+FUSIONAUTH_CONTAINER_PORT=9011
