Moves all traefik routing configuration to files

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,12 @@ COMPOSE_PROJECT_NAME=global
 # If you are using Docker Sync. For `osx` use 'native_osx', for `windows` use 'unison', for `linux` docker-sync is not required
 DOCKER_SYNC_STRATEGY=native_osx
 
+### APPLICATION DOMAINS #################################################
+# Domain name of reverse SSH tunnel such as ngrok
+TUNNEL_URL=your.domain.tld
+# Local domain name
+DOMAIN_NAME=local.test
+
 ### APPLICATION PORTS #################################################
 APP_CONTAINER_PORT=3000
 GRAPHQL_CONTAINER_PORT=4000
