--- a/.env.example
+++ b/.env.example
@@ -6,15 +6,14 @@ APP_CODE_PATH_CONTAINER=/usr
 VOLUMES_DRIVER=local
 NETWORKS_DRIVER=bridge
 
-# Docker Sync
-# You may add flags to the path `:cached`, `:delegated`. When using Docker Sync add `:nocopy`
+# You may add flags to the path `:cached`, `:delegated`.
 APP_CODE_CONTAINER_FLAG=:cached
 
 DATA_PATH_HOST=~/.docker/data
 
 ### Docker compose files ##################################
 
-# Select which docker-compose files to include. If using docker-sync append `:docker-compose.sync.yml` at the end
+# Select which docker-compose files to include.
 COMPOSE_FILE=docker-compose.yml
 
 WORKSPACE_TIMEZONE=Africa/Lusaka
@@ -24,11 +23,6 @@ COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names. This is useful if you have multiple projects that use laradock to have seperate containers per project.
 COMPOSE_PROJECT_NAME=global
-
-### Docker Sync ###########################################
-
-# If you are using Docker Sync. For `osx` use 'native_osx', for `windows` use 'unison', for `linux` docker-sync is not required
-DOCKER_SYNC_STRATEGY=native_osx
 
 ### APPLICATION DOMAINS #################################################
 # Domain name of reverse SSH tunnel such as ngrok
@@ -51,7 +45,7 @@ REDIS_WEBUI_CONTAINER_PORT=80
 ELASTICSEARCH_HOST_HTTP_PORT=9200
 FUSIONAUTH_CONTAINER_PORT=9011
 
-### ADONIS API CONTAINERS #################################################
+### MICROSERVICE CONTAINERS #################################################
 MS_DIR=microservices
 
 MS_ONE=authors
