--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -8,6 +8,7 @@ on:
   pull_request:
     branches:
       -  master
+      -  develop
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
