--- a/traefik/traefik.production.yaml
+++ b/traefik/traefik.production.yaml
@@ -35,7 +35,7 @@ api:
   debug: false
 
 providers:
-  providersThrottleDuration: 10s
+  providersThrottleDuration: 10
   docker:
     endpoint: "tcp://socket-proxy:2375"
     network: dockernet
