--- a/traefik/example-dynamic/services/http-service.yml
+++ b/traefik/example-dynamic/services/http-service.yml
@@ -2,13 +2,14 @@
 http:
   routers:
     serviceName:
+      rule: Host(`serviceName.{{env "DOMAIN_NAME"}}`)
       entryPoints:
         - web
-      rule: Host(`serviceName.{{env "DOMAIN_NAME"}}`)
       middlewares:
-        - redirecthttp@file
+        - redirecthttp
       service: serviceName
     serviceName-secure:
+      rule: Host(`serviceName.{{env "DOMAIN_NAME"}}`)
       entryPoints:
         - websecure
       tls: {}
