--- a/traefik/example-dynamic/services/portainer-service.yml
+++ b/traefik/example-dynamic/services/portainer-service.yml
@@ -6,7 +6,7 @@ http:
       entryPoints:
         - web
       middlewares:
-        - redirecthttp@file
+        - redirecthttp
       service: portainer-{{env "COMPOSE_PROJECT_NAME"}}@docker
     portainer-secure:
       rule: Host(`portainer.{{env "DOMAIN_NAME"}}`)
