--- a/.env.example
+++ b/.env.example
@@ -156,7 +156,7 @@ PGADMIN_LISTEN_PORT=80
 
 ### TRAEFIK #################################################
 
-TRAEFIK_VERSION=2.1.6
+TRAEFIK_VERSION=2.3
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
 
@@ -181,10 +181,12 @@ ELASTICSEARCH_JAVA_OPTS=-Xms256m -Xmx256m
 ELASTICSEARCH_HOST_TRANSPORT_PORT=9300
 
 ### FUSIONAUTH #########################################
-FUSIONAUTH_MEMORY=512M
+FUSIONAUTH_VERSION=1.23.1
+FUSIONAUTH_APP_MEMORY=512M
 FUSIONAUTH_HTTP_PORT=80
 FUSIONAUTH_HTTPS_PORT=443
-FUSIONAUTH_SEARCH_ENGINE_TYPE=database
-FUSIONAUTH_RUNTIME_MODE=development
-FUSIONAUTH_URL=http://fusionauth:9011
-FUSIONAUTH_SEARCH_SERVERS=http://elasticsearch:9200
+FUSIONAUTH_APP_RUNTIME_MODE=development
+FUSIONAUTH_APP_URL=http://fusionauth:9011
+FUSIONAUTH_APP_KICKSTART_FILE=/usr/local/fusionauth/kickstart/kickstart.json
+SEARCH_SERVERS=http://elasticsearch:9200
+SEARCH_TYPE=database
