feat: add fusionauth email templates

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,7 @@ GRAPHQL_CONTAINER_PORT=4000
 PRISMA_CONTAINER_PORT=4466
 STRAPI_CONTAINER_PORT=1337
 MONGO_EXPRESS_CONTAINER_PORT=8081
+LOGOWL_CONTAINER_PORT=2800
 WEBHOOK_CONTAINER_PORT=9000
 ADMINER_CONTAINER_PORT=8080
 PHPMYADMIN_CONTAINER_PORT=80
@@ -190,3 +191,16 @@ FUSIONAUTH_APP_URL=http://fusionauth:9011
 FUSIONAUTH_APP_KICKSTART_FILE=/usr/local/fusionauth/kickstart/kickstart.json
 SEARCH_SERVERS=http://elasticsearch:9200
 SEARCH_TYPE=database
+
+### LOGOWL #########################################
+LOGOWL_VERSION=2.2.1
+LOGOWL_SECRET='1WSTm3rqRnFndlhCH9gqH6XrW04'
+LOGOWL_DB_USER='logowl-user'
+LOGOWL_DB_PASSWORD='logowlpassword'
+LOGOWL_MONGO_DB_NAME=logowl
+LOGOWL_CLIENT_URL=http://localhost:3000
+LOGOWL_MONTHLY_REQUEST_LIMIT=100000
+LOGOWL_IS_SELFHOSTED=true
+MAILGUN_PRIVATE_KEY=aaa-aaa-aaa
+MAILGUN_DOMAIN=dev.test
+MAILGUN_API_BASE=eu # or us
