--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -21,6 +21,7 @@ GRAPHQL_CONTAINER_PORT=4000
 PRISMA_CONTAINER_PORT=4466
 STRAPI_CONTAINER_PORT=1337
 MONGO_EXPRESS_CONTAINER_PORT=8081
+LOGOWL_CONTAINER_PORT=2800
 WEBHOOK_CONTAINER_PORT=9000
 ADMINER_CONTAINER_PORT=8080
 PHPMYADMIN_CONTAINER_PORT=80
