feat: add webhook config and php container config

--- a/.env.example
+++ b/.env.example
@@ -121,6 +121,7 @@ POSTGRES_ENTRYPOINT_INITDB=./postgres/docker-entrypoint-initdb.d
 WEBHOOK_HOOKS_DIR=./webhook/hooks
 WEBHOOK_SCRIPTS_DIR=./webhook/scripts
 WEBHOOK_DEPLOY_REPOSITORY=${APP_CODE_PATH_HOST}
+WEBHOOK_VERSION=2.8.0
 
 ### MONGODB ###############################################
 
@@ -186,7 +187,12 @@ FUSIONAUTH_VERSION=1.23.1
 FUSIONAUTH_APP_MEMORY=512M
 FUSIONAUTH_HTTP_PORT=80
 FUSIONAUTH_HTTPS_PORT=443
+FUSIONAUTH_DATABASE_URL=jdbc:postgresql
+FUSIONAUTH_DATABASE_USER=fusionauth
+FUSIONAUTH_DATABASE_PASSWORD=fusionauthpassword
+FUSIONAUTH_DATABASE_NAME=fusionauth
 FUSIONAUTH_APP_RUNTIME_MODE=development
+FUSIONAUTH_APP_SILENT_MODE=false
 FUSIONAUTH_APP_URL=http://fusionauth:9011
 FUSIONAUTH_APP_KICKSTART_FILE=/usr/local/fusionauth/kickstart/kickstart.json
 SEARCH_SERVERS=http://elasticsearch:9200
@@ -194,9 +200,9 @@ SEARCH_TYPE=database
 
 ### LOGOWL #########################################
 LOGOWL_VERSION=2.2.1
-LOGOWL_SECRET='1WSTm3rqRnFndlhCH9gqH6XrW04'
-LOGOWL_DB_USER='logowl-user'
-LOGOWL_DB_PASSWORD='logowlpassword'
+LOGOWL_SECRET=1WSTm3rqRnFndlhCH9gqH6XrW04
+LOGOWL_DB_USER=logowluser
+LOGOWL_DB_PASSWORD=logowlpassword
 LOGOWL_MONGO_DB_NAME=logowl
 LOGOWL_CLIENT_URL=http://localhost:3000
 LOGOWL_MONTHLY_REQUEST_LIMIT=100000
@@ -204,3 +210,60 @@ LOGOWL_IS_SELFHOSTED=true
 MAILGUN_PRIVATE_KEY=aaa-aaa-aaa
 MAILGUN_DOMAIN=dev.test
 MAILGUN_API_BASE=eu # or us
+
+### FILEBEAT #########################################
+FILEBEAT_VERSION=7.10.2
+
+### DRONE CI #########################################
+DRONE_VERSION=1
+DRONE_GITHUB_CLIENT_ID=github_client_id
+DRONE_GITHUB_CLIENT_SECRET=github_cient_secret
+DRONE_RPC_SECRET=drone_secret
+DRONE_SERVER_HOST=drone.domain.com # Public IP or host
+DRONE_RPC_HOST=192.168.1.5:80 # Public IP or host
+DRONE_SERVER_PROTO=http # or https
+DRONE_RPC_PROTO=http # or https
+DRONE_RUNNER_CAPACITY=2
+DRONE_RUNNER_NAME=drone-runner-name
+DRONE_PRIVATE_KEY_FILE=/ssh/drone_runner
+DRONE_PUBLIC_KEY_FILE=/ssh/drone_runner.pub
+# Optional String value. Configures the database driver name.
+DRONE_DATABASE_DRIVER=postgres
+DRONE_DATABASE_NAME=drone
+DRONE_DATABASE_USER=drone
+DRONE_DATABASE_PASSWORD=db_password
+# Optional string value. Configures the database connection string.
+DRONE_DATABASE_DATASOURCE=postgres://root:password@1.2.3.4:5432/postgres?sslmode=disable
+# Optional string value. Configures the secret key used to encrypt secrets in
+# the database. Encryption is disabled by default and must be configured before
+# the system is first used.
+DRONE_DATABASE_SECRET=drone_db_secret
+# Optional string value configures the S3 bucket name.
+DRONE_S3_BUCKET=my-bucket
+DRONE_S3_ENDPOINT=https://play.min.io
+# Optional boolean value configures the S3 client to use path style.
+DRONE_S3_PATH_STYLE=false
+# Optional string value configures the S3 client to store log files in a bucket
+# subdirectory. If unset log files are stored in the bucket root.
+DRONE_S3_PREFIX=some/path
+# String value configures a comma-separated list of webhook endpoints, to which
+# global system events are delivered.
+DRONE_WEBHOOK_ENDPOINT=http://postb.in/b/cajf7cIU
+# Optional string value provides a comma-separated list of events and actions
+# that trigger webhooks. If unset all events and actions trigger webhooks.
+# Available events:
+# user:created
+# user:updated
+# user:deleted
+# repo:enabled
+# repo:disabled
+# repo:updated
+# build:created
+# build:updated
+DRONE_WEBHOOK_EVENTS=user:created,build,repo
+# Shared secret used to create an http-signature. The webhook recipient can use
+# the shared secret to verify request authenticity.
+DRONE_WEBHOOK_SECRET=dron-webhook-secret
+# Boolean value disables TLS verification when establishing a connection to the
+# remote webhook address. The default value is false.
+DRONE_WEBHOOK_SKIP_VERIFY=false
