--- a/traefik/example-dynamic/services/reverse-development-services.yml
+++ b/traefik/example-dynamic/services/reverse-development-services.yml
@@ -11,9 +11,9 @@ http:
       rule: Host(`dockerServiceName.{{env "TUNNEL_URL"}}`)
       entryPoints:
         - websecure
-      service: dockerServiceName@docker
+      service: dockerServiceName-{{env "COMPOSE_PROJECT_NAME"}}@docker
   services:
     serviceName:
       loadBalancer:
         servers:
-          - url: http://192.168.0.1:{{PORT_NUMBER_OF_SERVICE}}
+          - url: http://192.168.1.1:{{PORT_NUMBER_OF_SERVICE}}
